# king-algorithm

./: LICENSE  README.md  king-cloud.cabal  stack.yaml
app/: Main.hs
src/: Master.hs  Messages.hs  Proposer.hs
