name:                king-cloud
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Andreas Triantafyllos
maintainer:          andreas.triantafyllos@iohk.io
copyright:           (c) 2017 Andreas Triantafyllos
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Master
                     , Messages
                     , Proposer
  build-depends:       base >= 4.7 && < 5
                     , array
                     , binary
                     , containers
                     , distributed-process
                     , network-transport-tcp
                     , random
  ghc-options:         -Wall
  default-language:    Haskell2010

executable king
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , king-cloud
  ghc-options:         -Wall
  default-language:    Haskell2010